Fix HTML encoding and add charset meta tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
+<meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>全資料號碼圈選器</title>
 <style>
@@ -110,4 +111,5 @@ selectBtn.onclick=()=>{
 
 </body>
 </html>
+
 
