--- a/index.html
+++ b/index.html
@@ -1,115 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>全資料號碼圈選器</title>
-<style>
-body { font-family: sans-serif; margin:10px; text-align:center; background:#f5f5f5;}
-.btn { padding:10px 16px; margin:5px; border-radius:8px; border:1px solid #555; font-size:16px;}
-#dataZone { display:flex; flex-direction:column; gap:4px; margin-top:10px; text-align:left; max-height:70vh; overflow-y:auto;}
-.line { display:flex; gap:6px; flex-wrap:wrap;}
-.num { width:36px; height:36px; line-height:36px; border-radius:50%; border:2px solid transparent; background:white; text-align:center; font-size:14px;}
-.red{border-color:red;}
-.orange{border-color:orange;}
-.blue{border-color:blue;}
-.green{border-color:green;}
-.popup { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.95); display:none; flex-direction:column; align-items:center; justify-content:center;}
-.grid { display:grid; grid-template-columns:repeat(10,1fr); gap:6px; margin-top:10px;}
-.popup .num { border:2px solid #000; background:white;}
-.disabled { color:#aaa; border-color:#ccc !important; pointer-events:none;}
-</style>
+  <meta charset="utf-8">
 </head>
 <body>
-
-<h3>全資料號碼圈選器 (2007~2025)</h3>
-
-<button id="selectBtn" class="btn">選擇號碼</button>
-
-<div id="dataZone"></div>
-
-<div id="popup" class="popup">
-  <div id="numGrid" class="grid"></div>
-</div>
-
-<script>
-const dataZone=document.getElementById("dataZone");
-const popup=document.getElementById("popup");
-const grid=document.getElementById("numGrid");
-const selectBtn=document.getElementById("selectBtn");
-const colors=["red","orange","blue","green"];
-let colorIndex=0;
-let used=new Set();
-
-// 全部資料檔案清單
-const files=[
-  "data/data2007_2013.html",
-  "data/data2014_2017.html",
-  "data/data2018_2019.html",
-  "data/data2020_2021.html",
-  "data/data2022_2023.html",
-  "data/data2024_2025.html"
-];
-
-// 載入所有資料檔
-function loadAllData(){
-  files.forEach(file=>{
-    fetch(file)
-      .then(r=>r.text())
-      .then(text=>{
-        const lines=text.trim().split("\n");
-        lines.forEach(line=>{
-          const div=document.createElement("div");
-          div.className="line";
-          const parts=line.trim().split(" ");
-          const info=document.createElement("span");
-          info.textContent=parts.slice(0,2).join(" ");
-          div.appendChild(info);
-          parts.slice(2).forEach(n=>{
-            const nDiv=document.createElement("div");
-            nDiv.className="num";
-            nDiv.textContent=n.padStart(2,"0");
-            div.appendChild(nDiv);
-          });
-          dataZone.appendChild(div);
-        });
-      });
-  });
-}
-
-loadAllData();
-
-selectBtn.onclick=()=>{
-  grid.innerHTML="";
-  for(let i=0;i<40;i++){
-    const nDiv=document.createElement("div");
-    nDiv.className="num";
-    if(i===0){
-      nDiv.textContent="返回";
-      nDiv.style.fontSize="12px";
-      nDiv.onclick=()=>popup.style.display="none";
-    }else{
-      nDiv.textContent=i.toString().padStart(2,"0");
-      if(used.has(i)) nDiv.classList.add("disabled");
-      nDiv.onclick=()=>{
-        if(used.has(i)) return;
-        const color=colors[colorIndex];
-        colorIndex=(colorIndex+1)%colors.length;
-        used.add(i);
-        document.querySelectorAll("#dataZone .num").forEach(x=>{
-          if(x.textContent===nDiv.textContent) x.classList.add(color);
-        });
-        nDiv.classList.add("disabled");
-        popup.style.display="none";
-      };
-    }
-    grid.appendChild(nDiv);
-  }
-  popup.style.display="flex";
-};
-</script>
-
+  <div id="dataArea">載入中...</div>
+  <script>
+    fetch('data.html')
+      .then(r => r.text())
+      .then(html => document.getElementById('dataArea').innerHTML = html)
+      .catch(err => document.getElementById('dataArea').textContent = '載入失敗：' + err);
+  </script>
 </body>
 </html>
-
-
