--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>539 編輯器</title>
+  <title>666</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <h3>3×3 編輯器（01–39）</h3>
+  <h3>6666666</h3>
   <div class="grid" id="editor"></div>
   <button id="clearBtn">清除全部</button>
   <div id="numpad"></div>
