Change API URL in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <script>
 document.getElementById("load").addEventListener("click", () => {
-  const url = "https://api.allorigins.win/raw?url=https://lotto-8.com/lotto539/";
+  const url = "https://pilio.idv.tw";
   document.getElementById("result").innerText = "載入中...";
 
   fetch(url)
