Update URL in fetch request in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <script>
 document.getElementById("load").addEventListener("click", () => {
-  const url = "https://pilio.idv.tw";
+  const url = "https://www.pilio.idv.tw/lto539/list.asp";
   document.getElementById("result").innerText = "載入中...";
 
   fetch(url)
