Update API URL for data fetching

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <script>
 document.getElementById("load").addEventListener("click", () => {
-  const url = "https://www.pilio.idv.tw/lto539/list.asp";
+  const url = https://api.allorigins.win/raw?url=https://www.pilio.idv.tw/lto539/";
   document.getElementById("result").innerText = "載入中...";
 
   fetch(url)
