--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-TW">
 <head>
 <meta charset="UTF-8">
+<title>Now Now Now</title>
 <style>
 :root{
   --circle-size: 60px;
@@ -931,4 +932,5 @@ if(matchCount === selected.length && matchCount > 0){
 </script>
 
 </body>
+
 </html>
