--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-TW">
 <head>
 <meta charset="UTF-8">
+<title>Now Now Now</title>
 <style>
 :root{
   --circle-size: 60px;
@@ -9174,4 +9175,5 @@ yearsDivs.forEach(div => {
 });
 </script>
 </body>
+
 </html>
